# captcha_gen

./: CMakeLists.txt  LICENSE  README.md
src/: Captcha.cxx  Captcha.h
test/: CMakeLists.txt  test_main.cxx
